// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Equation Symbols - Bracket Snapshot Bracket 1`] = `
[
  0.01918,
  0,
  0.02218,
  0,
  0.01237,
  0.01435,
  0.01782,
  0.01489,
  0.00699,
  0.02931,
  0.01441,
  0.03003,
  0.00312,
  0.04472,
  0.01196,
  0.04535,
  0.00078,
  0.06043,
  0.01049,
  0.06079,
  0,
  0.0763,
  0.01,
  0.0763,
  0.00078,
  0.09217,
  0.01049,
  0.09181,
  0.00312,
  0.10788,
  0.01196,
  0.10725,
  0.00699,
  0.12329,
  0.01441,
  0.12257,
  0.01237,
  0.13825,
  0.01782,
  0.13771,
  0.01918,
  0.1526,
  0.02218,
  0.1526,
]
`;

exports[`Equation Symbols - Bracket Snapshot Bracket 2`] = `
[
  0.003,
  0,
  0,
  0,
  0.00981,
  0.01435,
  0.00436,
  0.01489,
  0.01519,
  0.02931,
  0.00777,
  0.03003,
  0.01906,
  0.04472,
  0.01022,
  0.04535,
  0.0214,
  0.06043,
  0.01169,
  0.06079,
  0.02218,
  0.0763,
  0.01218,
  0.0763,
  0.0214,
  0.09217,
  0.01169,
  0.09181,
  0.01906,
  0.10788,
  0.01022,
  0.10725,
  0.01519,
  0.12329,
  0.00777,
  0.12257,
  0.00981,
  0.13825,
  0.00436,
  0.13771,
  0.003,
  0.1526,
  0,
  0.1526,
]
`;

exports[`Equation Symbols - Bracket Static 1`] = `
[
  0.01918,
  0,
  0.02218,
  0,
  0.01237,
  0.01435,
  0.01782,
  0.01489,
  0.00699,
  0.02931,
  0.01441,
  0.03003,
  0.00312,
  0.04472,
  0.01196,
  0.04535,
  0.00078,
  0.06043,
  0.01049,
  0.06079,
  0,
  0.0763,
  0.01,
  0.0763,
  0.00078,
  0.09217,
  0.01049,
  0.09181,
  0.00312,
  0.10788,
  0.01196,
  0.10725,
  0.00699,
  0.12329,
  0.01441,
  0.12257,
  0.01237,
  0.13825,
  0.01782,
  0.13771,
  0.01918,
  0.1526,
  0.02218,
  0.1526,
]
`;
